--- a/Sprint-4/RealVagas-ReactNative/real-vagas/package.json
+++ b/Sprint-4/RealVagas-ReactNative/real-vagas/package.json
@@ -8,9 +8,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^5.11.3",
+    "@react-navigation/native": "^5.8.9",
     "expo": "~39.0.2",
-    "expo-updates": "~0.3.3",
     "expo-splash-screen": "~0.6.2",
+    "expo-updates": "~0.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
